# gst-plugins-good

./: RELEASE  configure.ac  gst-plugins-good.doap  meson.build
docs/: gst_plugins_cache.json
ext/: Makefile.am
ext/aalib/: gstaasink.c
ext/cairo/: gstcairo.c  gsttextoverlay.c  gsttextoverlay.h  gsttimeoverlay.c  gsttimeoverlay.h
ext/dv/: gstdvdec.c
ext/esd/: esdmon.c  esdsink.c  esdsink.h
ext/flac/: gstflac.c  gstflacdec.c  gstflacdec.h  gstflacenc.c  gstflactag.c
ext/gdk_pixbuf/: gstgdkpixbuf.c  pixbufscale.c
ext/jack/: gstjackaudiosink.c  gstjackaudiosink.h  gstjackaudiosrc.c
ext/jpeg/: gstjpegdec.c  gstjpegdec.h  gstjpegenc.c  gstsmokedec.c  gstsmokeenc.c
ext/libcaca/: gstcacasink.c
ext/libmng/: README  gstmngdec.c
ext/libpng/: gstpngdec.c  gstpngenc.c
ext/mikmod/: drv_gst.c  gstmikmod.c
ext/pango/: Makefile.am  gsttextoverlay.c  gsttextoverlay.h  gsttextrender.c  gsttextrender.h
ext/pulse/: pulseaudiosink.c  pulsesink.c  pulsesink.h  pulsesrc.c
ext/qt/: gstplugin.cc  gstqsgtexture.cc  gstqtglutility.cc  qtitem.cc  qtwindow.cc
ext/raw1394/: gst1394probe.c  gstdv1394src.c
ext/shout2/: gstshout2.c  gstshout2.h
ext/soup/: gstsouphttpsrc.c
ext/speex/: gstspeexdec.c  gstspeexenc.c
ext/vpx/: gstvpxdec.c  gstvpxenc.c
gst/alpha/: gstalpha.c  gstalphacolor.c
gst/audiofx/: audiofxbasefirfilter.c
gst/audioparsers/: gstaacparse.c  gstflacparse.c
gst/auparse/: gstauparse.c
gst/autodetect/: gstautoaudiosink.c  gstautoaudiosink.h  gstautovideosink.c  gstautovideosink.h
gst/avi/: Makefile.am  gstavi.c  gstavidemux.c  gstavidemux.h  gstavimux.c
gst/cutter/: gstcutter.c
po/: cs.po  fr.po  or.po  pt_BR.po  sv.po  tr.po
sys/oss/: Makefile.am  gstosscommon.c  gstosselement.c  gstosselement.h  gstossgst.c  gstossmixer.c  gstosssink.c  gstosssink.h  gstosssrc.c
tools/: Makefile.am  gst-launch-ext  gst-launch-ext-0.6  gst-visualise-0.6
(+153 files in other folders)
